--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,9 @@ server {
 
   root   /opt/www/;
   index  index.html index.htm;
+  
+  auth_basic	"Restricted Content";
+  auth_basic_user_file /etc/apache2/.htpasswd; 
 
   location /files/ {
     alias /opt/www/files/;
